# tata

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  pyproject.toml  readme.md  tasks.yaml
py_tata/builder/: __init__.py  tasks_builder.py
py_tata/cli/: app.py
py_tata/core/builder/: task_builder.py
py_tata/core/command_executor/: __init__.py  asyncio_command_executor.py
py_tata/core/loader/: __init__.py  exceptions.py  yaml_loader.py
py_tata/loader/: __init__.py  tasks_loader.py
py_tata/tasks/: task_result.py  validation_model.py
py_tata/tasks/check_hostname/: __init__.py  builder.py  task.py  validation_model.py
py_tata/tasks/check_ping/: __init__.py  builder.py  check_ping_task.py  task.py  validation_model.py
py_tata/tasks/linux_check_ip_forwarding/: builder.py  task_abc.py
py_tata/tasks/linux_check_ip_forwarding/ipv4/: __init__.py  builder.py  task.py  validation_model.py
py_tata/tasks/linux_check_ip_forwarding/ipv6/: __init__.py  builder.py  task.py  validation_model.py
py_tata/tasks/linux_check_ipv4_forwarding/: builder.py  task.py
py_tata/tasks/loader/: tasks_loader.py
py_tata/tasks/runner/: runner.py
src/cli/: app.py
src/tasks/: __init__.py  hostname_check_task.py
src/tasks/check_hostname/: __init__.py  check_hostname_task.py
src/tasks/check_ping/: check_ping_task.py
src/tasks/loader/: __init__.py  exceptions.py
src/tasks/runner/: runner.py
tests/integration/files/: tasks.yaml
tests/integration/py_tata/cli/: test_app.py
tests/integration/src/cli/: test_app.py
tests/unit/py_tata/core/builder/: test_task_builder.py
tests/unit/src/builder/: test_tasks_builder.py
tests/unit/src/loader/: test_tasks_loader.py
tests/unit/src/runner/: test_tasks_runner.py
tests/unit/src/tasks/: test_hostname_check_task.py
(+13 files in other folders)
