[tool.poetry]
name = "adm-simple-settings-checker"
version = "0.1.0"
description = ""
authors = ["Sviatoslav Bobryshev <wstswsb@gmail.com>"]
readme = "README.md"
packages = [{include = "adm_simple_settings_checker"}]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
