[tool.poetry]
name = "tata"
version = "0.1.0"
description = ""
authors = ["Sviatoslav Bobryshev <wstswsb@gmail.com>"]
readme = "README.md"
packages = [{include = "tata"}]

[tool.poetry.dependencies]
python = "^3.10.11"
typer = "^0.9.0"
rich = "^13.6.0"
icmplib = "^3.0.4"
pyyaml = "^6.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
