[tool.poetry]
name = "py_tata"
version = "0.1.6"
readme = "readme.md"
description = ""
authors = ["Sviatoslav Bobryshev <wstswsb@gmail.com>"]

[tool.poetry.scripts]
pytata = "py_tata.cli.app:app"

[tool.poetry.dependencies]
python = "^3.10.11"
typer = "^0.9.0"
rich = "^13.6.0"
icmplib = "^3.0.4"
pyyaml = "^6.0.1"
pydantic = "^2.4.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
